GPencil: Hotkeys (1,2,3) do not work to switch Select Mode in Edit Mode #69963

Closed
opened 2019-09-17 04:39:28 +02:00 by n1729 · 6 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.76

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 21:02, hash: 76650402f3
Worked: (optional)

Short description of error
When you switch Select Mode by hotkey (1,2,3) in Edit Mode, Select Mode buttons on a header switch in appearance but a main region does not switch to the mode. As for Sculpt Mode, the hotkeys do not work at all.

Annotation 2019-09-17 112420.png

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.76 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-16 21:02, hash: `76650402f3` Worked: (optional) **Short description of error** When you switch Select Mode by hotkey (1,2,3) in Edit Mode, Select Mode buttons on a header switch in appearance but a main region does not switch to the mode. As for Sculpt Mode, the hotkeys do not work at all. ![Annotation 2019-09-17 112420.png](https://archive.blender.org/developer/F7752172/Annotation_2019-09-17_112420.png)
Author

Added subscriber: @n1729

Added subscriber: @n1729

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2019-09-17 12:23:14 +02:00

I can confirm..using the shortcut the viewport does not change in Edit mode, but selecting the button does.

I can confirm..using the shortcut the viewport does not change in Edit mode, but selecting the button does.

This report includes two things, a bug (Edit mode) and a feature request (Sculpt mode). In Sculpt mode the buttons are not only for sleection but for Masking too, so the buttons are not only modes but also a switch and the keymap would need work different, so now it's not a bug but a request.

This report includes two things, a bug (Edit mode) and a feature request (Sculpt mode). In Sculpt mode the buttons are not only for sleection but for Masking too, so the buttons are not only modes but also a switch and the keymap would need work different, so now it's not a bug but a request.
Antonio Vazquez changed title from GPencil: Hotkeys (1,2,3) do not work to switch Select Mode in both Edit Mode and Sculpt Mode to GPencil: Hotkeys (1,2,3) do not work to switch Select Mode in Edit Mode 2019-09-17 13:06:32 +02:00

This issue was referenced by df5fae1fcc

This issue was referenced by df5fae1fcc9a45c2a38faa1e61522afa70830346

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69963
No description provided.