Fix T69963: GPencil Hotkeys (1,2,3) do not work to switch Select Mode in Edit Mode